src/index.css
@font-face {
  font-family: 'Barbour';
  src: url('./fonts/barbour-webfont.woff2') format('woff2'),
    url('./fonts/barbour-webfont.woff') format('woff'),
    url('./fonts/barbour-webfont.eot') format('eot'),
    url('./fonts/barbour-webfont.ttf') format('ttf');
}

@font-face {
  font-family: 'Carmin 0.2';
  src: url('./fonts/Carmin0.2-ExtraBold.eot');
  src: url('./fonts/Carmin0.2-ExtraBold.woff2') format('woff2'),
    url('./fonts/Carmin0.2-ExtraBold.woff') format('woff'),
    url('./fonts/Carmin0.2-ExtraBold.svg') format('svg');
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: 'Nostra Sett';
  src: url('./fonts/Nostrav1.0-Sett.woff2') format('woff2'),
    url('./fonts/Nostrav1.0-Sett.woff') format('woff'),
    url('./fonts/Nostrav1.0-Sett.eot') format('eot');
  font-style: normal;
}

@svg-load coffeeText url(./img/coffeeText.svg) {
}

body {
  background: #000000;
}

body,
section,
article,
div,
h1,
h2,
h3,
h4,
h5,
p {
  margin: 0;
  padding: 0;
}

img,
svg {
  max-width: 100%;
}

html {
  scroll-behavior: smooth;
}

p {
  font-family: 'Input Mono Lt';
  font-display: swap;
  font-style: normal;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.5;
}

.u-visuallyHidden {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
}

.u-gridContainer-leftIllustration {
  @media (min-width: 720px) {
    grid-template-columns: 120px 1fr;
  }

  @media (min-width: 1000px) {
    grid-template-columns: 135px 550px;
  }
}

.u-gridContainer-rightIllustration {
  @media (min-width: 720px) {
    grid-template-columns: 1fr 120px;
  }

  @media (min-width: 1000px) {
    grid-template-columns: 550px 135px;
  }
}

.u-gridItem-1of2 {
  grid-column: 1 / -1;

  @media (min-width: 720px) {
    grid-column: 1 / 2;
  }
}

.u-gridItem-2of2 {
  grid-column: 1 / -1;

  @media (min-width: 720px) {
    grid-column: 2 / -1;
  }
}

.c-coffeeText {
  background: svg-inline(coffeeText);
}

